# angelus-sonus

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_linux.md  README_windows.md  pyproject.toml  requirements.txt
src/: main.py
tests/: test_audio.py  test_logging.py  test_scheduler.py
